Cleaned up tracked files using .gitignore

--- a/DATASETS/datacleaning.ipynb
+++ b/DATASETS/datacleaning.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "d2e01799",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "4             26.0  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "672cf9f4",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "15e33a8c",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
        "4  33987a8ee5             http://twitpic.com/4w75p - I like it!!  positive"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "46346290",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6b1b349c",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "fe75d7e0",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "085fb190",
    "metadata": {},
    "outputs": [],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8e26e6b2",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "4b2f2114",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "df9ca17d",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "Name: text, Length: 3534, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "a081a7f0",
    "metadata": {},
    "outputs": [],
@@ -434,40 +434,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1c0a3b86",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                                 Last session of the day\n",
-       "1       Shanghai is also really exciting precisely  sk...\n",
-       "2       Recession hit Veronique Branquinho she has to ...\n",
-       "3                                              happy bday\n",
-       "4                                               I like it\n",
-       "                              ...                        \n",
-       "3529    its at  am im very tired but i cant sleep  but...\n",
-       "3530    All alone in this old house again  Thanks for ...\n",
-       "3531    I know what you mean My little dog is sinking ...\n",
-       "3532    sutra what is your next youtube video gonna be...\n",
-       "3533                              omgssh  ang cute ng bby\n",
-       "Name: text, Length: 3534, dtype: object"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_cleaned['text'] "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
-   "id": "a2ebaf40",
+   "id": "1c0a3b86",
    "metadata": {},
    "outputs": [
     {
@@ -493,12 +461,44 @@
     }
    ],
    "source": [
-    "df_cleaned['text']"
+    "df_cleaned['text'] "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "a2ebaf40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                 Last session of the day\n",
+       "1       Shanghai is also really exciting precisely  sk...\n",
+       "2       Recession hit Veronique Branquinho she has to ...\n",
+       "3                                              happy bday\n",
+       "4                                               I like it\n",
+       "                              ...                        \n",
+       "3529    its at  am im very tired but i cant sleep  but...\n",
+       "3530    All alone in this old house again  Thanks for ...\n",
+       "3531    I know what you mean My little dog is sinking ...\n",
+       "3532    sutra what is your next youtube video gonna be...\n",
+       "3533                              omgssh  ang cute ng bby\n",
+       "Name: text, Length: 3534, dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cleaned['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "425a20e3",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
        "4  33987a8ee5                                          I like it  positive"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "a76a2d59",
    "metadata": {},
    "outputs": [],
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "31cae32f",
    "metadata": {},
    "outputs": [
@@ -661,7 +661,7 @@
        "4                                          I like it  positive"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,18 +687,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b4ec957a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "with open('cleaned_data.json', 'r') as f:\n",
-    "    json_data = json.load(f)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "f0a51c72",
    "metadata": {},
    "outputs": [],
@@ -706,10 +703,10 @@
     "import pandas as pd\n",
     "import json\n",
     "\n",
-    "# Correct way to export\n",
-    "json_data = df_cleaned.to_json(orient='records', indent=4) \n",
     "\n",
-    "# Save with explicit path\n",
+    "json_data = df_cleaned.to_json(orient='index', indent=4) \n",
+    "\n",
+    "\n",
     "with open('cleaned_data.json', 'w', encoding='utf-8') as f:\n",
     "    f.write(json_data)"
    ]
@@ -724,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "572486f6",
    "metadata": {},
    "outputs": [
@@ -733,7 +730,7 @@
      "output_type": "stream",
      "text": [
       "Current working directory: c:\\Users\\Binisa\\OneDrive\\Documents\\Cybersheild\\DATASETS\n",
-      "Files in directory: ['cleaned_data.json', 'datacleaning.ipynb', 'EcoPreprocessed.csv', 'Untitled-1.ipynb']\n",
+      "Files in directory: ['cleaned_data.json', 'datacleaning.ipynb', 'EcoPreprocessed.csv', 'exoprocessed.ipynb', 'langdetect1.ipynb', 'languagedetect.ipynb', 'Untitled-1.ipynb']\n",
       "Absolute path: c:\\Users\\Binisa\\OneDrive\\Documents\\Cybersheild\\DATASETS\\cleaned_data.json\n"
      ]
     }
@@ -754,16 +751,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "c053ed2e",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: langdetect in c:\\users\\binisa\\anaconda3\\lib\\site-packages (1.0.9)\n",
+      "Requirement already satisfied: six in c:\\users\\binisa\\anaconda3\\lib\\site-packages (from langdetect) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install langdetect\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1fc7ddcc",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langdetect import detect\n",
+    "import json\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fc7ddcc",
+   "id": "840197f5",
    "metadata": {},
    "outputs": [],
    "source": []
